# bifrost

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  SKILL.md  install-binary.ps1  install-binary.sh  install.sh  keyboard.html  mise.toml  package.json  project.md  release.sh  rules.txt  uninstall.ps1  uninstall.sh
crates/bifrost-admin/: ADMIN_API.md  Cargo.toml  build.rs
crates/bifrost-admin/src/: admin_audit.rs  admin_auth.rs  admin_auth_db.rs  app_icon.rs  async_traffic.rs  body_store.rs  client_trust_tracker.rs  connection_monitor.rs  connection_registry.rs  cors.rs  frame_store.rs  ip_tls_pending.rs  lib.rs  metrics.rs  network.rs  notification_db.rs  port_rebind.rs  push.rs  replay_executor.rs  request_rules.rs  resource_alerts.rs  router.rs  security.rs  sse.rs  state.rs  static_files.rs  status_printer.rs  traffic.rs  traffic_store.rs  version_check.rs  websocket_monitor.rs  ws_payload_store.rs
crates/bifrost-admin/src/handlers/: app_icon.rs  audit.rs  auth.rs  bifrost_file.rs  cert.rs  config.rs  env.rs  frames.rs  group.rs  group_rules.rs  metrics.rs  mod.rs  notification.rs  proxy.rs  replay.rs  replay_ws.rs  room.rs  rules.rs  scripts.rs  search.rs  sync.rs  syntax.rs  system.rs  traffic.rs  user.rs  values.rs  websocket.rs  whitelist.rs
crates/bifrost-admin/src/replay_db/: mod.rs  schema.rs  store.rs  types.rs
crates/bifrost-admin/src/search/: engine.rs  mod.rs  types.rs
crates/bifrost-admin/src/tests/: deadlock_test.rs  mod.rs
crates/bifrost-admin/src/traffic_db/: mod.rs  query.rs  schema.rs  store.rs  types.rs
crates/bifrost-admin/tests/: admin_audit.rs
crates/bifrost-cli/: Cargo.toml
crates/bifrost-cli/src/: cli.rs  config.rs  help.rs  lib.rs  main.rs  process.rs
crates/bifrost-cli/src/commands/: admin.rs  bifrost_file.rs  ca.rs  completions.rs  group.rs  install_skill.rs  metrics.rs  mod.rs  rule.rs  script.rs  search.rs  start.rs  status.rs  status_tui.rs  stop.rs  sync_cmd.rs  system_proxy.rs  traffic.rs  update_check.rs  upgrade.rs  value.rs  version.rs  whitelist.rs
crates/bifrost-cli/src/commands/config/: client.rs  display.rs  keys.rs  mod.rs
crates/bifrost-cli/src/parsing/: cookies.rs  headers.rs  mod.rs  replace.rs  rules.rs
crates/bifrost-cli/tests/: cli_commands.rs  daemon_shutdown.rs
crates/bifrost-core/: Cargo.toml  build.rs
crates/bifrost-core/src/: access_control.rs  error.rs  http_client.rs  lib.rs  logging.rs  panic_handler.rs  protocol.rs  shell_proxy.rs  syntax.rs  system_proxy.rs  version_check.rs
crates/bifrost-core/src/bifrost_file/: parser.rs  types.rs  writer.rs
crates/bifrost-core/src/matcher/: domain.rs  factory.rs  ip.rs  mod.rs  path_wildcard.rs  regex.rs  wildcard.rs
crates/bifrost-core/src/rule/: context.rs  filter.rs  group.rs  invalid_rules.bifrost  mod.rs  parser.rs  resolver.rs  rule.rs  template.rs  types.rs  valid_rules.bifrost  value_source.rs  value_store.rs
crates/bifrost-core/src/rule/parser/: mod.rs  types.rs
crates/bifrost-e2e/: Cargo.toml
crates/bifrost-e2e/docs/rules/: README.md  body-manipulation.md  filters.md  response-modification.md  rule-priority.md  scripts.md  url-manipulation.md
crates/bifrost-e2e/docs/testing/: test-cases.md
crates/bifrost-e2e/src/: assertions.rs  client.rs  curl.rs  lib.rs  log_capture.rs  main.rs  mock.rs  proxy.rs  reporter.rs  runner.rs
crates/bifrost-e2e/src/tests/: admin_api.rs  body_cache.rs  body_manipulation.rs  brute_force.rs  client_process.rs  curl_mock.rs  dns.rs  filters.rs  group_rules.rs  https.rs  install_skill.rs  matchers.rs  mock_traffic.rs  mod.rs  protocols.rs  public.rs  replay_sse.rs  request.rs  request_modification.rs  response.rs  response_modification.rs  routing.rs  rule_merge_strategy.rs  rule_priority.rs  rule_validation.rs  status_redirect.rs  template.rs  tls_config_disconnect.rs  tls_intercept_mode.rs  tls_switch_test.rs  traffic_cli.rs  url_manipulation.rs  userpass_auth.rs  ws_payload_persistence.rs
crates/bifrost-gui/: Cargo.toml  build.rs
crates/bifrost-gui/src/: app.rs  main.rs  proxy_controller.rs  state.rs
crates/bifrost-gui/src/ui/: dashboard.rs  mod.rs  rules.rs  settings.rs  sidebar.rs  traffic.rs  values.rs  whitelist.rs
crates/bifrost-plugin/: Cargo.toml
crates/bifrost-plugin-examples/: Cargo.toml
crates/bifrost-plugin-examples/src/: lib.rs
crates/bifrost-plugin/src/: context.rs  error.rs  hook.rs  lib.rs  manager.rs  nodejs.rs  protocol.rs  rust_sdk.rs
crates/bifrost-proxy/: Cargo.toml
crates/bifrost-proxy/src/: body.rs  decompress.rs  dns.rs  http.rs  lib.rs  logging.rs  mock.rs  process_info.rs  request.rs  response.rs  server.rs  socks.rs  socks_udp.rs  tee.rs  tunnel.rs  unified.rs  url.rs  websocket.rs
crates/bifrost-proxy/src/http3/: capsule.rs  client.rs  connect_udp.rs  datagram.rs  dual_stack.rs  mod.rs  proxy.rs  quic_mitm.rs  server.rs  stream.rs  tunnel.rs
crates/bifrost-proxy/src/protocol/: detect.rs  h2.rs  http1.rs  mod.rs  pool.rs  quic.rs  sse.rs  stream.rs  websocket.rs
crates/bifrost-proxy/src/proxy/: mod.rs
crates/bifrost-proxy/src/proxy/http/: handler.rs  (+5 more)
crates/bifrost-proxy/src/transform/: badge.rs  body.rs  compress.rs  decompress.rs  mod.rs  request.rs  response.rs
crates/bifrost-proxy/src/utils/: bounded.rs  http_size.rs  logging.rs  mock.rs  mod.rs  process_info.rs  tee.rs  throttle.rs  url.rs
crates/bifrost-proxy/tests/: protocol_e2e.rs  upstream_http3_e2e.rs
crates/bifrost-script/: Cargo.toml
crates/bifrost-script/src/: engine.rs  error.rs  lib.rs  sandbox.rs  types.rs
crates/bifrost-storage/: Cargo.toml
crates/bifrost-storage/src/: config.rs  config_manager.rs  data_dir.rs  lib.rs  rules.rs  state.rs  unified_config.rs  values.rs
crates/bifrost-sync/: Cargo.toml
crates/bifrost-sync/src/: client.rs  lib.rs  manager.rs  normalize.rs  types.rs
crates/bifrost-tests/: Cargo.toml
crates/bifrost-tls/: Cargo.toml
crates/bifrost-tls/src/: ca.rs  cache.rs  config.rs  dynamic.rs  install.rs  lib.rs  sni.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs  native_launcher.rs
(+829 files in other folders)
