[workspace]
resolver = "2"
members = [
  "crates/bifrost-core",
  "crates/bifrost-proxy",
  "crates/bifrost-tls",
  "crates/bifrost-plugin",
  "crates/bifrost-plugin-examples",
  "crates/bifrost-storage",
  "crates/bifrost-admin",
  "crates/bifrost-cli",
  "crates/bifrost-gui",
  "crates/bifrost-tests",
  "crates/bifrost-e2e",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bifrost Team"]
license = "MIT"

[workspace.dependencies]
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
tokio = { version = "1.0", features = ["full"] }
regex = "1.10"
ipnet = "2.9"
lazy_static = "1.4"
rcgen = { version = "=0.12.1", features = ["pem", "x509-parser"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.1"
lru = "0.16"
parking_lot = "0.12"
webpki-roots = "1.0"
serde_json = "1.0"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
tempfile = "3.10"
async-trait = "0.1"
bytes = "1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
reqwest = { version = "0.11", features = ["socks"] }
uuid = { version = "1.10", features = ["v4"] }
rand = "0.8"
url = "2.5"
urlencoding = "2.1"
chrono = "0.4"
once_cell = "1.19"
