[package]
name = "bifrost-admin"
version = "0.1.0"
edition = "2021"
description = "Admin API and web interface for Bifrost proxy"

[dependencies]
bifrost-core = { path = "../bifrost-core" }
bifrost-storage = { path = "../bifrost-storage" }

tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
sysinfo = "0.31"
urlencoding = "2"
url = "2"

[dev-dependencies]
tokio-test = "0.4"
