[package]
name = "bifrost-admin"
version = "0.1.0"
edition = "2021"
description = "Admin API and web interface for Bifrost proxy"

[dependencies]
bifrost-core = { path = "../bifrost-core" }
bifrost-storage = { path = "../bifrost-storage" }

tokio = { version = "1", features = ["full", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
sysinfo = "0.31"
urlencoding = "2"
url = "2"
qrcode = "0.14"
base64 = "0.22"
regex = "1"
dashmap = "6"

[target.'cfg(target_os = "macos")'.dependencies]
icns = "0.3"
plist = "1"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSData", "NSDictionary", "NSGeometry", "NSRange"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSImage", "NSBitmapImageRep"] }

[target.'cfg(target_os = "windows")'.dependencies]
pelite = "0.10"
ico = "0.3"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }

[dev-dependencies]
tokio-test = "0.4"
