[package]
name = "bifrost-admin"
version = "0.0.56-beta"
edition = "2021"
description = "Admin API and web interface for Bifrost proxy"

[dependencies]
bifrost-core = { path = "../bifrost-core" }
bifrost-tls = { path = "../bifrost-tls" }
bifrost-storage = { path = "../bifrost-storage" }
bifrost-sync = { path = "../bifrost-sync" }
bifrost-script = { path = "../bifrost-script" }

tokio = { version = "1", features = ["full", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = "0.26"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
toml.workspace = true
tracing = "0.1"
ipnet.workspace = true
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
sysinfo = "0.31"
urlencoding = "2"
url = "2"
qrcode = "0.14"
base64 = "0.22"
regex = "1"
dashmap = "6"
futures-util = { version = "0.3", features = ["sink"] }
sha1 = "0.10"
rusqlite = { version = "0.33", features = ["bundled", "backup"] }
bincode = "1.3"
lru.workspace = true
flate2 = "1"
brotli = "7"
zstd = "0.13"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-native-certs = "0.8"
once_cell.workspace = true
jsonwebtoken = "9"
bcrypt = "0.17"
rand.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
icns = "0.3"
plist = "1"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
  "NSString",
  "NSData",
  "NSDictionary",
  "NSGeometry",
  "NSRange",
] }
objc2-app-kit = { version = "0.3", features = [
  "NSWorkspace",
  "NSImage",
  "NSBitmapImageRep",
] }

[target.'cfg(target_os = "windows")'.dependencies]
pelite = "0.10"
ico = "0.3"
image = { version = "0.25", default-features = false, features = [
  "ico",
  "png",
] }
local-ip-address = "0.6"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["net"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile.workspace = true
