[package]
name = "bifrost-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for Bifrost proxy"

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "bifrost"
path = "src/main.rs"

[dependencies]
bifrost-admin = { path = "../bifrost-admin" }
bifrost-core = { path = "../bifrost-core" }
bifrost-proxy = { path = "../bifrost-proxy" }
bifrost-tls = { path = "../bifrost-tls" }
bifrost-storage = { path = "../bifrost-storage" }
bifrost-plugin = { path = "../bifrost-plugin" }
parking_lot.workspace = true
tracing.workspace = true
tokio.workspace = true
clap.workspace = true
dirs.workspace = true
dialoguer = "0.11"
toml.workspace = true
ipnet.workspace = true
bytes.workspace = true
serde_json.workspace = true
urlencoding = "2.1"
regex = "1"
futures = "0.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["signal", "process", "fs"] }
