[package]
name = "bifrost-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for Bifrost proxy"

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "bifrost"
path = "src/main.rs"

[dependencies]
bifrost-admin = { path = "../bifrost-admin" }
bifrost-core = { path = "../bifrost-core" }
bifrost-proxy = { path = "../bifrost-proxy" }
bifrost-sync = { path = "../bifrost-sync" }
bifrost-tls = { path = "../bifrost-tls" }
bifrost-storage = { path = "../bifrost-storage" }
bifrost-script = { path = "../bifrost-script" }
parking_lot.workspace = true
tracing.workspace = true
tokio.workspace = true
clap.workspace = true
dirs.workspace = true
dialoguer = "0.11"
toml.workspace = true
ipnet.workspace = true
bytes.workspace = true
serde_json.workspace = true
serde.workspace = true
urlencoding = "2.1"
regex = "1"
futures = "0.3"
ureq.workspace = true
chrono.workspace = true
colored = "2"
tempfile = "3"
ratatui = "0.29"
crossterm = "0.28"
atty = "0.2"
tokio-tungstenite = "0.26"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["signal", "process", "fs"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console", "Win32_Foundation"] }
