[package]
name = "bifrost-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and utilities for Bifrost proxy"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
regex.workspace = true
ipnet.workspace = true
lazy_static.workspace = true
