[package]
name = "bifrost-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and utilities for Bifrost proxy"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
regex.workspace = true
ipnet.workspace = true
lazy_static.workspace = true
uuid.workspace = true
rand.workspace = true
url.workspace = true
urlencoding.workspace = true
chrono = { workspace = true, features = ["serde"] }
once_cell.workspace = true
serde.workspace = true
sysproxy.workspace = true
serde_json.workspace = true
toml.workspace = true
dirs.workspace = true
lru.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["sync"] }
ureq.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
