[package]
name = "bifrost-e2e"
version = "0.1.0"
edition = "2021"
description = "End-to-end testing framework for Bifrost proxy"
authors = ["Bifrost Team"]

[[bin]]
name = "bifrost-e2e"
path = "src/main.rs"

[dependencies]
bifrost-core = { path = "../bifrost-core" }
bifrost-proxy = { path = "../bifrost-proxy" }

tokio = { workspace = true, features = [
  "full",
  "rt-multi-thread",
  "macros",
  "time",
  "sync",
] }
hyper = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }

reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

colored = "2.1"
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
regex = { workspace = true }
url = "2.5"

[dev-dependencies]
