[package]
name = "bifrost-e2e"
version = "0.0.15-beta"
edition = "2021"
description = "End-to-end testing framework for Bifrost proxy"
authors = ["Bifrost Team"]

[[bin]]
name = "bifrost-e2e"
path = "src/main.rs"

[dependencies]
bifrost-core = { path = "../bifrost-core" }
bifrost-proxy = { path = "../bifrost-proxy" }
bifrost-admin = { path = "../bifrost-admin" }
bifrost-cli = { path = "../bifrost-cli" }
bifrost-tls = { path = "../bifrost-tls" }

tokio = { workspace = true, features = [
  "full",
  "rt-multi-thread",
  "macros",
  "time",
  "sync",
] }
hyper = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }

reqwest = { version = "0.12", default-features = false, features = [
  "cookies",
  "json",
  "rustls-tls",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio-tungstenite = "0.26"
base64 = "0.22"
futures-util = "0.3"

colored = "2.1"
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
regex = { workspace = true }
url = "2.5"
parking_lot = { workspace = true }
bytes = { workspace = true }
portpicker = "0.1"
urlencoding = "2.1"

[dev-dependencies]
