[package]
name = "bifrost-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Native GUI client for Bifrost proxy using egui"

[[bin]]
name = "bifrost-gui"
path = "src/main.rs"

[dependencies]
bifrost-admin = { path = "../bifrost-admin" }
bifrost-core = { path = "../bifrost-core" }
bifrost-proxy = { path = "../bifrost-proxy" }
bifrost-tls = { path = "../bifrost-tls" }
bifrost-storage = { path = "../bifrost-storage" }

eframe = { version = "0.31", default-features = false, features = [
  "default_fonts",
  "glow",
  "persistence",
] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["syntect"] }
bytes = "1"

tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
parking_lot.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"
open = "5"

[build-dependencies]
embed-resource = { version = "3.0", optional = true }

[features]
default = []
windows-icon = ["embed-resource"]
