[package]
name = "bifrost-plugin-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Example plugins for Bifrost proxy"

[dependencies]
bifrost-plugin = { path = "../bifrost-plugin" }
bifrost-core = { path = "../bifrost-core" }
tokio.workspace = true
async-trait = "0.1"
tracing.workspace = true
bytes = "1.5"
parking_lot.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
