[package]
name = "bifrost-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Plugin system for Bifrost proxy"

[dependencies]
bifrost-core = { path = "../bifrost-core" }
tokio.workspace = true
serde.workspace = true
serde_json = "1.0"
async-trait = "0.1"
thiserror.workspace = true
tracing.workspace = true
hyper = { version = "1.4", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = { version = "1.5", features = ["serde"] }
parking_lot.workspace = true

[dev-dependencies]
tempfile = "3.10"
