[package]
name = "bifrost-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP/HTTPS proxy server for Bifrost"

[dependencies]
bifrost-core = { path = "../bifrost-core" }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
bytes = "1"
tracing.workspace = true
futures-util = "0.3"
pin-project-lite = "0.2"

[dev-dependencies]
tokio-test = "0.4"
