[package]
name = "bifrost-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP/HTTPS proxy server for Bifrost"

[dependencies]
bifrost-core = { path = "../bifrost-core" }
bifrost-admin = { path = "../bifrost-admin" }
bifrost-storage = { path = "../bifrost-storage" }
bifrost-tls = { path = "../bifrost-tls" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "codec", "compat"] }
tokio-rustls = "0.26"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-rustls = { version = "0.27", features = ["http1", "http2", "webpki-tokio", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
bytes = "1"
tracing.workspace = true
futures-util = { version = "0.3", features = ["io"] }
pin-project-lite = "0.2"
sha1 = "0.10"
base64 = "0.22"
h2 = "0.4"
flate2 = "1"
async-compression = { version = "0.4.18", features = [
  "tokio",
  "gzip",
  "deflate",
  "brotli",
  "zstd",
] }
thiserror = "2"
rand = "0.8"
serde_json = "1"
url = "2"
mime_guess = "2"
regex = "1"
webpki-roots.workspace = true
hickory-resolver = "0.24"

[dev-dependencies]
tokio-test = "0.4"
