[package]
name = "bifrost-script"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "JavaScript scripting engine for Bifrost proxy"

[dependencies]
rquickjs = { version = "0.9", features = ["futures", "macro"] }
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
reqwest = { workspace = true, features = ["blocking"] }

bifrost-core = { path = "../bifrost-core" }
bifrost-storage = { path = "../bifrost-storage" }

[target.'cfg(any(target_arch = "arm", all(target_arch = "aarch64", target_os = "windows")))'.dependencies]
rquickjs-sys = { version = "0.9", features = ["bindgen"] }

[dev-dependencies]
tempfile = "3"
