[package]
name = "bifrost-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Configuration and storage management for Bifrost proxy"

[dependencies]
bifrost-core = { path = "../bifrost-core" }
serde.workspace = true
toml.workspace = true
serde_json.workspace = true
dirs.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
futures = "0.3"

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
