[package]
name = "bifrost-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bifrost-core = { path = "../bifrost-core" }
bifrost-storage = { path = "../bifrost-storage" }
chrono.workspace = true
parking_lot.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
urlencoding.workspace = true

[dev-dependencies]
tempfile.workspace = true
