[package]
name = "bifrost-tls"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TLS certificate management for Bifrost proxy"

[dependencies]
bifrost-core = { path = "../bifrost-core" }
rcgen.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
lru.workspace = true
parking_lot.workspace = true
webpki-roots.workspace = true
x509-parser = "0.18"
chrono.workspace = true
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.10"
