[package]
name = "bifrost-tls"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TLS certificate management for Bifrost proxy"

[dependencies]
bifrost-core = { path = "../bifrost-core" }
rcgen.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
lru.workspace = true
parking_lot.workspace = true
webpki-roots.workspace = true
x509-parser = "0.18"
chrono.workspace = true
time.workspace = true
sha2 = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7"

[dev-dependencies]
tempfile = "3.10"
