[package]
name = "bifrost-desktop"
version = "0.0.15-beta"
edition = "2021"
authors = ["EdenLiu <hxfdarling@icloud.com>"]
license = "MIT"
description = "Tauri desktop shell for Bifrost"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
